--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,6 +22,19 @@
 /* components */
 @import url("@styles/component/primaryButtonComponent.css");
 
+.full-width-height {
+    width: 100%;
+    height: 100%;
+}
+
+.container-full {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
 /* tailwind css*/
 @tailwind base;
 @tailwind components;
